Creating lot animation  Changes to be committed: 	modified:   bin/www 	modified:   node_modules/game.js 	modified:   public/css/style.css 	modified:   public/js/game/bones.js 	modified:   public/js/game/game.js 	modified:   public/js/system.js 	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 </head>
 <body onmousedown='return false;'>
 
-	<button id='shakeButton'>Кидать кости</button>
+	<div id='gamemessage'></div>
 	<div class="dice d1"></div>
 	<div class="dice d2"></div>
     <div id='container'>
