--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,10 @@
     height: 40px;
     position: absolute;
     box-shadow: 0 0 10px rgba(125,90,57,0.5);
-    background: #fff url('../images/dice.png')
+    background: #fff url('../images/dice.png');
+    z-index: 999;
+    visibility: hidden;
+    
     /* border: 1px solid #7d5a39; */
 }
     .d1{}
