--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,43 @@
 }
 
 /* DIES STYLES */
-.dice {
+
+div.die{
+	width:50px;
+	height:50px;
+	background-color:#eeeeee;
+	-webkit-box-shadow:5px 5px 20px 5px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow:5px 5px 20px 5px rgba(0, 0, 0, 0.25);
+	box-shadow:5px 5px 20px 5px rgba(0, 0, 0, 0.25);
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;border-radius:5px;
+	-moz-background-clip:padding;
+	-webkit-background-clip:padding-box;
+	background-clip:padding-box;
+	position:absolute;
+	top:420px;
+	cursor:pointer;
+	-webkit-opacity:0.5;
+	-moz-opacity:0.5;
+	opacity:0.5;
+}
+	div.die.active{-webkit-opacity:1;-moz-opacity:1;opacity:1;}
+	div.die#die1{left:50%;}
+	div.die#die2{left:58%;}
+	div.die[data-value="1"] div.face[data-id="1"]{display:block;}
+	div.die[data-value="2"] div.face[data-id="2"]{display:block;}
+	div.die[data-value="3"] div.face[data-id="3"]{display:block;}
+	div.die[data-value="4"] div.face[data-id="4"]{display:block;}
+	div.die[data-value="5"] div.face[data-id="5"]{display:block;}
+	div.die[data-value="6"] div.face[data-id="6"]{display:block;}
+	div.die div.face{display:none;}div.die div.face div.pip{width:10px;height:10px;background-color:#222222;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;position:absolute;}div.die div.face div.pip.left{left:7.5px;}
+	div.die div.face div.pip.center{left:20px;}
+	div.die div.face div.pip.right{right:7.5px;}
+	div.die div.face div.pip.top{top:7.5px;}
+	div.die div.face div.pip.middle{top:20px;}
+	div.die div.face div.pip.bottom{bottom:7.5px;}
+
+/* .dice {
     float: left;
     width: 40px;
     height: 40px;
@@ -17,8 +53,6 @@
     background: #fff url('../images/dice.png');
     z-index: 999;
     visibility: hidden;
-    
-    /* border: 1px solid #7d5a39; */
 }
     .d1{}
-    .d2{}
+    .d2{}*/
