--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,5 +110,79 @@
 			</div>
 	</div>
 	
+	
+	<div class="die" id="die3">
+		<div class="face" data-id="1">
+			<div class="pip center middle"></div>
+		</div>
+		<div class="face" data-id="2">
+			<div class="pip top right"></div>
+			<div class="pip bottom left"></div>
+		</div>
+		<div class="face" data-id="3">
+			<div class="pip top left"></div>
+			<div class="pip center middle"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="4">
+			<div class="pip top left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip top right"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="5">
+			<div class="pip top left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip center middle"></div>
+			<div class="pip top right"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="6">
+			<div class="pip top left"></div>
+			<div class="pip middle left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip top right"></div>
+			<div class="pip middle right"></div>
+			<div class="pip bottom right"></div>
+			</div>
+	</div>
+	
+	
+	<div class="die" id="die4">
+		<div class="face" data-id="1">
+			<div class="pip center middle"></div>
+		</div>
+		<div class="face" data-id="2">
+			<div class="pip top right"></div>
+			<div class="pip bottom left"></div>
+		</div>
+		<div class="face" data-id="3">
+			<div class="pip top left"></div>
+			<div class="pip center middle"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="4">
+			<div class="pip top left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip top right"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="5">
+			<div class="pip top left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip center middle"></div>
+			<div class="pip top right"></div>
+			<div class="pip bottom right"></div>
+		</div>
+		<div class="face" data-id="6">
+			<div class="pip top left"></div>
+			<div class="pip middle left"></div>
+			<div class="pip bottom left"></div>
+			<div class="pip top right"></div>
+			<div class="pip middle right"></div>
+			<div class="pip bottom right"></div>
+			</div>
+	</div>
+	
 </body>
 </html>
