New stable version Fixed click events , drag events and select piece events  Changes to be committed: 	new file:   public/images/pieces/light.png 	modified:   public/js/game/game.js 	modified:   public/js/game/piece.js 	modified:   public/js/game/rules.js 	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,8 @@
 <body onmousedown='return false;'>
 
 	<div id='gamestatus'></div>
+	<div id='home1pl'>*</div>
+	<div id='home2pl'>*</div>
 <!--
 	<div class="dice d1"></div>
 	<div class="dice d2"></div>
