--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-	<link rel="shortcut icon" type="image/x-icon" href="/?getFile=images/favicon.ico"/>
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="/?getFile=images/favicon.ico"/> -->
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 
 	<title>Длинные нарды</title>
 	
