--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,10 @@
     
 	</div>
 	
+<div id='finish_dialog' style='visibility : hidden' title='Конец игры'>
+	
+</div>
+	
 <div class="die" id="die1">
 		<div class="face" data-id="1">
 			<div class="pip center middle"></div>
