--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,27 +28,6 @@
 	<script type="text/javascript" src="../js/system.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$('#btest').click(function(){
-				$('#finish_dialog').dialog({
-		            modal : false ,
-		            buttons : {
-		                'Закрыть' : function(){
-		                    $(this).dialog('close');
-		                } ,
-		                'Начать сначала' : function(){
-		                    $(this).dialog('close');
-		                }
-		            } ,
-		            minWidth : 500
-		        });
-		        
-		        $('.ui-dialog-titlebar').remove();
-			});
-		});
-	</script>
-	
 </head>
 <body onmousedown='return false;'>
 	<button id='btest'>Показать окно</button>
@@ -63,10 +42,10 @@
     
 	</div>
 	
-<div id='finish_dialog'>
-	<p>
+<div id='gamedialog'>
+	
 		Игра окончена
-	</p>
+	
 </div>
 	
 <div class="die" id="die1">
