Created finish game and regame 	modified:   bin/www 	new file:   public/css/images/ui-bg_diagonals-thick_18_b81900_40x40.png 	new file:   public/css/images/ui-bg_diagonals-thick_20_666666_40x40.png 	new file:   public/css/images/ui-bg_flat_10_000000_40x100.png 	new file:   public/css/images/ui-bg_glass_100_f6f6f6_1x400.png 	new file:   public/css/images/ui-bg_glass_100_fdf5ce_1x400.png 	new file:   public/css/images/ui-bg_glass_65_ffffff_1x400.png 	new file:   public/css/images/ui-bg_gloss-wave_35_f6a828_500x100.png 	new file:   public/css/images/ui-bg_highlight-soft_100_eeeeee_1x100.png 	new file:   public/css/images/ui-bg_highlight-soft_75_ffe45c_1x100.png 	new file:   public/css/images/ui-icons_222222_256x240.png 	new file:   public/css/images/ui-icons_228ef1_256x240.png 	new file:   public/css/images/ui-icons_ef8c08_256x240.png 	new file:   public/css/images/ui-icons_ffd27a_256x240.png 	new file:   public/css/images/ui-icons_ffffff_256x240.png 	modified:   public/css/jquery-ui.css 	new file:   public/css/jquery-ui_tmp.css 	modified:   public/js/game/game.js 	modified:   public/js/system.js 	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,6 @@
 	
 </head>
 <body onmousedown='return false;'>
-	<button id='btest'>Показать окно</button>
 	<div id='gamestatus'></div>
 	<div id='home1pl'>*</div>
 	<div id='home2pl'>*</div>
@@ -42,11 +41,7 @@
     
 	</div>
 	
-<div id='gamedialog'>
-	
-		Игра окончена
-	
-</div>
+<div id='gamedialog'></div>
 	
 <div class="die" id="die1">
 		<div class="face" data-id="1">
