Fixed promblem with head rules. Add sound effects  Changes to be committed: 	modified:   public/js/game/bones.js 	modified:   public/js/game/game.js 	modified:   public/js/game/piece.js 	new file:   public/js/ion.sound.min.js 	modified:   public/js/system.js 	new file:   public/sounds/dice.mp3 	new file:   public/sounds/piece.mp3 	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
 	<title>Длинные нарды</title>
 	
-	<!-- Подключение сторонних библиотек -->
+	<!-- Подключение сторонних библиотек и плагинов -->
 	<script type="text/javascript" src="../js/kinetic.js"></script>
 	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 	<script type="text/javascript" src="../js/jquery.min.js"></script>
@@ -16,6 +16,8 @@
   	<!-- <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
   	<script type="text/javascript" src="../js/jquery-ui.js"></script>
   	<script type="text/javascript" src="../js/socket.io.js"></script>
+  	
+  	<script type="text/javascript" src="../js/ion.sound.min.js"></script>
   	<!-- <script type="text/javascript" src="../js/jquery.dice.js"></script> -->
 
   	<!-- скрипты системы -->
