--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,8 +43,13 @@
     
 	</div>
 	
-<div id='gamedialog'></div>
+	<div id='outbody'>
+	  <div id='outwhite'></div>
+	  <div id='outblack'></div>
+	</div>
 	
+<div id='gamedialog'></div>
+
 <div class="die" id="die1">
 		<div class="face" data-id="1">
 			<div class="pip center middle"></div>
