--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,3 +83,12 @@ div.die{
 }
     .d1{}
     .d2{}*/
+    
+
+.ui_button{
+	font-weight: normal;
+	color: #555555;
+	background: #e6e6e6;
+}
+
+.ui_button{border: 1px solid #999999; background: #dadada}
