--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,28 +6,6 @@
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 
 	<title>Длинные нарды</title>
-	
-	<!-- Подключение сторонних библиотек и плагинов -->
-	<script type="text/javascript" src="../js/kinetic.js"></script>
-	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
-	<script type="text/javascript" src="../js/jquery.min.js"></script>
-	<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/humanity/jquery-ui.css"> --> 
-	<link rel="stylesheet" href="../css/jquery-ui.css">
-  	<!-- <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
-  	<script type="text/javascript" src="../js/jquery-ui.js"></script>
-  	<script type="text/javascript" src="../js/socket.io.js"></script>
-  	
-  	<script type="text/javascript" src="../js/ion.sound.min.js"></script>
-  	<!-- <script type="text/javascript" src="../js/jquery.dice.js"></script> -->
-
-  	<!-- скрипты системы -->
-  	<script type="text/javascript" src="../js/game/socket.js"></script>
-  	<script type="text/javascript" src="../js/game/game.js"></script>
-  	<script type="text/javascript" src="../js/game/board.js"></script>
-  	<script type="text/javascript" src="../js/game/bones.js"></script>
-  	<script type="text/javascript" src="../js/game/rules.js"></script>
-  	<script type="text/javascript" src="../js/game/piece.js"></script>
-	<script type="text/javascript" src="../js/system.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	
 </head>
@@ -194,6 +172,31 @@
 			<div class="pip bottom right"></div>
 			</div>
 	</div>
+	
+	<!-- Подключение сторонних библиотек и плагинов -->
+	<script type="text/javascript" src="../js/kinetic.js"></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+	<script type="text/javascript" src="../js/jquery.min.js"></script>
+	<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/humanity/jquery-ui.css"> --> 
+	<link rel="stylesheet" href="../css/jquery-ui.css">
+  	<!-- <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
+  	<script type="text/javascript" src="../js/jquery-ui.js"></script>
+  	<script type="text/javascript" src="../js/socket.io.js"></script>
+  	
+  	<script type="text/javascript" src="../js/ion.sound.min.js"></script>
+  	<!-- <script type="text/javascript" src="../js/jquery.dice.js"></script> -->
+  	
+  	<!-- вращение костей -->
+  	<script type="text/javascript" src="../js/jquery.rotate.js"></script>
+
+  	<!-- скрипты системы -->
+  	<script type="text/javascript" src="../js/game/socket.js"></script>
+  	<script type="text/javascript" src="../js/game/game.js"></script>
+  	<script type="text/javascript" src="../js/game/board.js"></script>
+  	<script type="text/javascript" src="../js/game/bones.js"></script>
+  	<script type="text/javascript" src="../js/game/rules.js"></script>
+  	<script type="text/javascript" src="../js/game/piece.js"></script>
+	<script type="text/javascript" src="../js/system.js"></script>
 	
 </body>
 </html>
