Add back step button  Changes to be committed: 	new file:   public/js/backbone.js 	modified:   public/js/game/game.js 	modified:   public/js/game/rules.js 	new file:   public/js/underscore.js 	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,8 @@
     
 	</div>
 	
+	<button id='tbUndo'>Ход назад</button>
+	
 	<div id='outbody'>
 	  <div id='outwhite'></div>
 	  <div id='outblack'></div>
