Исправляются баги после шефа, в процессе создания авторизации Изменения: 	* Проверка - не возвращает ли игрок фишку на 1-ое поле 	* Отследил вывод фишки в дом по dblclick 	* Исправлен баг, преддомное состояние объявляется и при dblick 	* Положено начало переписывания сервер скрипта на coffeescript 	* Положено начало создания авторизации и приглашений на coffeescript и backbone 	* Переписан скрипт system.js на coffeescript - main.js и добавлен в шаблон
 Changes to be committed:
	modified:   app.js
	modified:   bin/www
	new file:   bin/www.coffee
	new file:   bin/www.js
	modified:   node_modules/game.js
	modified:   node_modules/games.controller.js
	modified:   public/css/style.css
	new file:   public/js/auth.coffee
	new file:   public/js/auth.js
	modified:   public/js/game/board.js
	modified:   public/js/game/game.js
	new file:   public/js/main.coffee
	new file:   public/js/main.js
	new file:   routes/user.js
	modified:   routes/users.js
	modified:   views/index.ejs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,18 @@
-#container{
-    margin     : auto;
-    height: 600px;
-    width: 601px;
-}
+#container{margin : auto; height: 600px; width: 601px;}
+#gamestatus{color : red;}
 
-#gamestatus{
-    color : red;
-}
+#outbody{height: 50px; width: 600px; margin: auto; margin-top:25px; background: #fff}
+#outwhite , #outblack{width:100%; height:50%}
+#outwhite img , #outblack img{height: 25px;	float: left}
+
+.ui_button{font-weight: normal;	color: #555555;	background: #e6e6e6}
+.ui_button{border: 1px solid #999999; background: #dadada}
+/* #welcome-div{display: none;} */
 
 /* DIES STYLES */
+#die3 .pip , #die4 .pip{width: 5px; height: 5px;}
+#die3 {width: 40px; height: 40px; top:400px;}
+#die4 {width: 40px; height: 40px; top:400px;}
 
 div.die{
 	width:50px;
@@ -30,9 +34,6 @@ div.die{
 	opacity:0.5;
 	visibility: hidden;
 }
-
-#die3 {width: 40px; height: 40px; top:400px;}
-#die4 {width: 40px; height: 40px; top:400px;}
 
 	div.die.active{-webkit-opacity:1;-moz-opacity:1;opacity:1;}
 	div.die#die1{left:50%;}
@@ -61,45 +62,4 @@ div.die{
 	div.die div.face div.pip.middle{top:20px;}
 	div.die div.face div.pip.bottom{bottom:7.5px;}
 	
-	#die3 .pip , #die4 .pip{width: 5px; height: 5px;}
-
-
-#outbody{
-    height: 50px;
-    width: 600px;
-    margin: auto;
-    background: #fff;
-  }
-
-#outwhite , #outblack{
-  width:100%;
-  height:50%;
-}
-
-#outwhite img , #outblack img{
-	height: 25px;
-	float: left;
-}
-
-
-/* .dice {
-    float: left;
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    box-shadow: 0 0 10px rgba(125,90,57,0.5);
-    background: #fff url('../images/dice.png');
-    z-index: 999;
-    visibility: hidden;
-}
-    .d1{}
-    .d2{}*/
-    
-
-.ui_button{
-	font-weight: normal;
-	color: #555555;
-	background: #e6e6e6;
-}
-
-.ui_button{border: 1px solid #999999; background: #dadada}
+	#paneltop div{float:left; margin-left: 10px;}
